[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assate/SFX/shoot-01.wav" type="AudioStream" id=1]
[ext_resource path="res://Autoload/AudioManager.gd" type="Script" id=2]
[ext_resource path="res://Assate/SFX/walk_on_grass.wav" type="AudioStream" id=3]
[ext_resource path="res://Assate/SFX/Jump.wav" type="AudioStream" id=4]

[node name="AudioManager" type="Node2D"]
script = ExtResource( 2 )

[node name="SFX" type="Node2D" parent="."]

[node name="BulletShooting" type="Node2D" parent="SFX"]

[node name="_1" type="AudioStreamPlayer" parent="SFX/BulletShooting"]
stream = ExtResource( 1 )

[node name="_2" type="AudioStreamPlayer" parent="SFX/BulletShooting"]
stream = ExtResource( 1 )
pitch_scale = 0.96

[node name="_3" type="AudioStreamPlayer" parent="SFX/BulletShooting"]
stream = ExtResource( 1 )
pitch_scale = 1.15

[node name="_4" type="AudioStreamPlayer" parent="SFX/BulletShooting"]
stream = ExtResource( 1 )
pitch_scale = 1.02

[node name="_5" type="AudioStreamPlayer" parent="SFX/BulletShooting"]
stream = ExtResource( 1 )
pitch_scale = 1.08

[node name="_6" type="AudioStreamPlayer" parent="SFX/BulletShooting"]
stream = ExtResource( 1 )
pitch_scale = 1.26

[node name="PlayerWalk" type="Node2D" parent="SFX"]

[node name="_1" type="AudioStreamPlayer" parent="SFX/PlayerWalk"]
stream = ExtResource( 3 )
pitch_scale = 1.43

[node name="_2" type="AudioStreamPlayer" parent="SFX/PlayerWalk"]
stream = ExtResource( 3 )
pitch_scale = 1.42

[node name="_3" type="AudioStreamPlayer" parent="SFX/PlayerWalk"]
stream = ExtResource( 3 )
pitch_scale = 1.1

[node name="PlayerJump" type="Node2D" parent="SFX"]

[node name="_1" type="AudioStreamPlayer" parent="SFX/PlayerJump"]
stream = ExtResource( 4 )
pitch_scale = 0.95

[node name="_2" type="AudioStreamPlayer" parent="SFX/PlayerJump"]
stream = ExtResource( 4 )
pitch_scale = 1.42

[node name="_3" type="AudioStreamPlayer" parent="SFX/PlayerJump"]
stream = ExtResource( 4 )
